[gd_scene load_steps=6 format=3 uid="uid://byf4pv818tdcr"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_57adf"]
[ext_resource type="Texture2D" uid="uid://hi8sep00blfs" path="res://Assets/Sprites/PlayerModel_Idle_1.png" id="2_dijf1"]
[ext_resource type="Texture2D" uid="uid://duvb7iqd7v50f" path="res://Assets/Sprites/PlayerModel_Idle_2.png" id="3_io21j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k8x0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dijf1")
}, {
"duration": 1.0,
"texture": ExtResource("3_io21j")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wumfp"]
radius = 16.0

[node name="PlayerRoot" type="Node2D"]
z_index = 10
script = ExtResource("1_57adf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_k8x0a")
animation = &"idle"
frame = 1
frame_progress = 0.067446

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wumfp")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
